--- a/rock-paper-scissors/style.css
+++ b/rock-paper-scissors/style.css
@@ -137,3 +137,39 @@ img {
     color: black;
     font-weight: 600;
 }  
+
+#modal{
+    z-index: 1;
+    visibility: hidden;
+    opacity: 0;
+    background-color: rgb(55, 55, 55, 0.8);
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    color: var(--cinza);
+    font-family: var(--montserrat);
+    font-weight: 700;
+    text-align: center;
+}
+
+#modal-container{
+    position: relative;
+    margin: 15% auto;
+    background-color: var(--branco);
+    height: 250px;
+    width: 400px;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    align-items: center;
+    justify-content: center;
+}
+
+#modal-text{
+    font-size: 32px;
+}
