--- a/pokefind/style.css
+++ b/pokefind/style.css
@@ -254,7 +254,7 @@ label {
     text-align: center;
 }
 
-#modalPokedex>div {
+#modalPokedex > div {
     transition: cubic-bezier(0.075, 0.82, 0.165, 1) all 0.8s;
     background-color: rgb(17, 0, 36);
     position: absolute;
@@ -273,6 +273,7 @@ label {
 }
 
 .cardPokemon {
+    transition: ease all 0.3s;
     padding: 20px;
     width: 200px;
     height: 300px;
@@ -299,6 +300,7 @@ label {
 }
 
 .pokemons {
+    margin-top: 20px;
     width: 80%;
     height: 80%;
     overflow-y: scroll;
@@ -313,10 +315,13 @@ label {
     height: 40%;
     flex-direction: column;
     justify-content: space-between;
+    align-items: center;
+    gap: 5px;
     padding: 10px;
 }
 
-.delete-pokemon{
+.delete-pokemon,
+.delete-all{
     cursor: pointer;
     transition: ease all 0.2s;
     padding: 5px;
@@ -325,13 +330,54 @@ label {
     border: 1px solid red;
 }
 
-.delete-pokemon:hover{
+.delete-pokemon{
+    width: fit-content;
+}
+
+.delete-pokemon:hover,
+.delete-all:hover{
     color: rgb(17, 0, 36);
     background-color: red;
 }
 
-.delete-pokemon:active{
+.delete-pokemon:active,
+.delete-all:active{
     scale: 0.8;
+}
+
+.delete-all{
+    padding: 5px 15px;
+    margin: 25px 0;
+}
+
+#modal-delete-pokemon{
+    transition: ease all 0.3s;
+    z-index: 2;
+    visibility: hidden;
+    opacity: 0;
+    background-color: rgba(23, 0, 59, 0.8);
+    backdrop-filter: blur(2px);
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    color: var(--cinza);
+    font-family: var(--montserrat);
+    font-weight: 700;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+#modal-delete-pokemon > div{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
 }
 
 /* scrollbar */
